cambios delineación urbana y Gasolina

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3395,6 +3395,7 @@ impuestos.sobreTasaGasolina.menu.seleccionar = Seleccionar
 impuestos.sobreTasaGasolina.menu.presentarDeclaracion = Presentar Declaración
 impuestos.sobreTasaGasolina.menu.rop = ROP
 impuestos.sobreTasaGasolina.menu.pagoEnLinea = Pago en Línea
+impuestos.sobreTasaGasolina.menu.nombre= Nombre
 
 #generales
 impuestos.sobreTasaGasolina.DatosGenerales.titulo = Detalle Sobretasa a gasolina
@@ -3403,14 +3404,16 @@ impuestos.sobreTasaGasolina.DatosGenerales.Periodo = Selecciona el Periodo
 impuestos.sobreTasaGasolina.DatosGenerales.buscar = Buscar
 
 #datos basicos
-impuestos.sobreTasaGasolina.datosBasicos.titulo = Datos Basicos
+impuestos.sobreTasaGasolina.datosBasicos.titulo = Datos Básicos
 impuestos.sobreTasaGasolina.datosBasicos.calidadResponsable = Calidad de responsable
 impuestos.sobreTasaGasolina.datosBasicos.numTanques = Número de tanques
-impuestos.sobreTasaGasolina.datosBasicos.capacidadAlmacProd = Capacidad almac. prod.
-impuestos.sobreTasaGasolina.datosBasicos.capacAlmacTanques = Capac. almac tanques
+impuestos.sobreTasaGasolina.datosBasicos.capacidadAlmacProd = Capacidad almacenaje de producto
+impuestos.sobreTasaGasolina.datosBasicos.capacAlmacTanques = Capacidad almacenaje de tanques
 impuestos.sobreTasaGasolina.datosBasicos.ubicacionPlantaAbasto = Ubicación planta abasto
 impuestos.sobreTasaGasolina.datosBasicos.codigoPostal = Código postal
 impuestos.sobreTasaGasolina.datosBasicos.localidad = Localidad
+impuestos.sobreTasaGasolina.DatosGenerales.anioGravableConsultardisable= Año gravable
+impuestos.sobreTasaGasolina.DatosGenerales.Periododisable= Periodo
 
 #representantes
 impuestos.sobreTasaGasolina.representantes.titulo = Representantes
@@ -3421,7 +3424,112 @@ impuestos.sobreTasaGasolina.representantes.tipoRelacion = Tipo de relación
 impuestos.sobreTasaGasolina.representantes.fechaDesde = Fecha desde
 impuestos.sobreTasaGasolina.representantes.fechaHasta = Fecha hasta
 impuestos.sobreTasaGasolina.representantes.fuenteDato = Fuente dato
+impuestos.sobreTasaGasolina.representantes.regresar= Regresar
+impuestos.sobreTasaGasolina.representantes.detalleanteriores= Consulta tu detalle de periodos anteriores
 #->FIN dev-federico 17/01/2019 textos para Sobretasa Gasolina
 
 
 updatePwd.token.sameOldPassword=La nueva contraseña no puede ser igual a la anterior.
+
+delineacion.urbana.title=Deliación Urbana
+delineacion.urbana.desciption=Es la declaración y pago que se realiza cuando existe una construcción nueva o refacción de las existentes. El Impuesto de Delineación Urbana lo constituye la ejecución de obras o construcciones con licencia de construcción o reconocimiento. Más información.
+delineacion.urbana.propertiesList=Listado de Predios Registrados
+delineacion.urbana.CDU=CDU
+delineacion.urbana.select=Seleccionar
+delineacion.urbana.declaration=Presentar Declaración
+delineacion.urbana.payments.ROPGeneration=Generación de ROP
+delineacion.urbana.pago.linea=Pago en Línea
+
+delineacion.urbana.detail.title=Detalle Delineación Urbana
+delineacion.urbana.detail.selectYear=Selecciona el año gavable a consultar
+delineacion.urbana.detail.selectperiod=Selecciona el Periodo
+delineacion.urbana.detail.search=Buscar
+
+delineacion.urbana.basic.title=Datos Básicos
+delineacion.urbana.basic.Liceconstruction=Licencia de Construcción
+delineacion.urbana.basic.numresolurevalida=Número de resolución revalidación
+delineacion.urbana.basic.tipomarca= Tipo de marca
+delineacion.urbana.basic.marca=Marca
+delineacion.urbana.basic.numresoprorroga=Número de resolución prórroga
+delineacion.urbana.basic.fechrexpe=Fecha de expedición
+delineacion.urbana.basic.fechrevalida=Fecha de revalidación
+delineacion.urbana.basic.fechfinobra=Fecha fin de la obra
+delineacion.urbana.basic.fechresolprorroga=Fecha resolución prórroga
+delineacion.urbana.basic.numradicado=Número de radicado
+delineacion.urbana.basic.fechradicado=Fecha de radicado
+delineacion.urbana.basic.modaLicencia=Modalidad de licencia
+
+delineacion.urbana.adicionales.title=Datos Adicionales
+delineacion.urbana.adicionales.numradicado=Número de radicado
+delineacion.urbana.adicionales.chip=CHIP
+delineacion.urbana.adicionales.direcobra=Dirección de la Obra
+delineacion.urbana.adicionales.codpostal=Código Postal
+delineacion.urbana.adicionales.localidad=Localidad
+delineacion.urbana.adicionales.matinmo=Matricula inmobiliaria
+delineacion.urbana.adicionales.estrato=Estrato
+delineacion.urbana.adicionales.tipunidad=Tipo de unidad a construir
+delineacion.urbana.adicionales.cantunida=Cantidad de Unidades
+delineacion.urbana.adicionales.areaunidad=Área por unidad
+
+delineacion.urbana.dec.generales.title=Datos Generales
+delineacion.urbana.dec.generales.anigrav=Año Gravable
+delineacion.urbana.dec.generales.periodo=Periodo
+delineacion.urbana.dec.generales.cdu=CDU
+delineacion.urbana.dec.generales.opuso=Opciones de Uso
+
+delineacion.urbana.dec.areasusos.title= Cuadro de Áreas y Usos
+delineacion.urbana.dec.areasusos.vivienda=Código de uso vivienda:
+delineacion.urbana.dec.areasusos.comercio=Código de uso comercio:
+delineacion.urbana.dec.areasusos.servicios=Código de uso servicios:
+delineacion.urbana.dec.areasusos.dotacional=Código de uso dotacional:
+delineacion.urbana.dec.areasusos.numunidades=Número de Unidades
+delineacion.urbana.dec.areasusos.arquitec=Áreas del proyecto Arquitectónico
+delineacion.urbana.dec.areasusos.netuso=Áreas netas por uso
+delineacion.urbana.dec.areasusos.intervenidas=Áreas Intervenidas
+delineacion.urbana.dec.areasusos.lote=Lote
+delineacion.urbana.dec.areasusos.m2=m2
+delineacion.urbana.dec.areasusos.sotano=Sótano(s)
+delineacion.urbana.dec.areasusos.semisotano=Semisótano(s)
+delineacion.urbana.dec.areasusos.pisouno=Primer piso
+delineacion.urbana.dec.areasusos.pisorestan=Pisos restantes
+delineacion.urbana.dec.areasusos.totalcons=Total construido
+delineacion.urbana.dec.areasusos.libpisouno=Libre primer piso
+delineacion.urbana.dec.areasusos.usovivi= Uso vivienda
+delineacion.urbana.dec.areasusos.vivienda= Vivienda
+delineacion.urbana.dec.areasusos.usocom=Uso comercio
+delineacion.urbana.dec.areasusos.comercio=Comercio
+delineacion.urbana.dec.areasusos.usoserv=Uso servicios
+delineacion.urbana.dec.areasusos.serv=Servicios
+delineacion.urbana.dec.areasusos.usodot=Uso dotacional
+delineacion.urbana.dec.areasusos.dot=Dot. / Instituc.
+delineacion.urbana.dec.areasusos.indus=Industria
+delineacion.urbana.dec.areasusos.otros=Otros
+delineacion.urbana.dec.areasusos.total=Total
+delineacion.urbana.dec.areasusos.ampl=Ampliada
+delineacion.urbana.dec.areasusos.modf=Modificada
+delineacion.urbana.dec.areasusos.adec=Adecuada
+delineacion.urbana.dec.areasusos.obnu=Obra nueva
+delineacion.urbana.dec.areasusos.recono=Reconocimiento
+delineacion.urbana.dec.areasusos.conserv=Conservación / Restauración
+delineacion.urbana.dec.areasusos.reforz=Reforzamiento est.
+delineacion.urbana.dec.areasusos.demo=Demolición
+delineacion.urbana.dec.areasusos.cerra=Cerramiento
+delineacion.urbana.dec.areasusos.fechultabo= Fecha de último abono en cuenta
+delineacion.urbana.dec.areasusos.fechejec=Fecha de Ejecutoria
+
+delineacion.urbana.dec.liqpriv.title=Liquidación Privada
+delineacion.urbana.dec.liqpriv.totobrcons=Total Presupuesto de Obra o construcción
+delineacion.urbana.dec.liqpriv.valorcons=Valor comercial de Construcción
+delineacion.urbana.dec.liqpriv.valorret=Valor retención
+delineacion.urbana.dec.liqpriv.pag=Pago
+delineacion.urbana.dec.liqpriv.totpag=Total a pagar
+delineacion.urbana.dec.liqpriv.calc=Calcular
+
+delineacion.urbana.dec.firm.title=Información Firma del Declarante
+delineacion.urbana.dec.firm.tipiden=Tipo de Identificación
+delineacion.urbana.dec.firm.numide=Número de Identificación
+delineacion.urbana.dec.firm.nombraz=Apellidos y Nombres o Razón Social
+delineacion.urbana.dec.firm.firma=Firma
+delineacion.urbana.dec.firm.predec=Presentar Declaración
+delineacion.urbana.dec.firm.paglin=Pagar en Línea
+delineacion.urbana.dec.firm.genrop=Generar ROP
