Manejo de errores en sobretasa a la gasolina, en su liquidador, tambien se manejan desde Presentar declaracion

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3434,9 +3434,18 @@ impuestos.presentarDeclaracion.Periodo = Periodo*:
 impuestos.presentarDeclaracion.PresentarDeclaracion = Presentar Declaración
 #->FIN dev-federico 7/02/2019 textos para Presentar Declaración
 #->INI dev-federico 7/02/2019 textos para Manejo de errores en sobre tasa a gasolina
-error.impuestoGasolina.sobretasa.error1 = Error al leer detalle de gasolina
-error.impuestoGasolina.sobretasa.error2 = Error al leer informacion del Contribuyente
-error.impuestoGasolina.sobretasa.error3 = Error al leer calculo de gasolina
+error.impuestoGasolina.sobretasa.error1 = Error al leer detalle de gasolina {0}
+error.impuestoGasolina.sobretasa.error2 = Error al leer informacion del Contribuyente {0}
+error.impuestoGasolina.sobretasa.error3.attrib1 = Error al leer calculo de gasolina {0}
+error.impuestoGasolina.sobretasa.error3.attrib2 = Error al leer calculo de gasolina {0} {1}
+error.impuestoGasolina.sobretasa.error3.attrib3 = Error al leer calculo de gasolina {0} {1} {2}
+error.impuestoGasolina.sobretasa.error3.attrib4 = Error al leer calculo de gasolina {0} {1} {2} {3} 
+error.impuestoGasolina.sobretasa.error3.attrib5 = Error al leer calculo de gasolina {0} {1} {2} {3} {4} 
+error.impuestoGasolina.sobretasa.error3.attrib6 = Error al leer calculo de gasolina {0} {1} {2} {3} {4} {5} 
+error.impuestoGasolina.sobretasa.error3.attrib7 = Error al leer calculo de gasolina {0} {1} {2} {3} {4} {5} {6} 
+error.impuestoGasolina.sobretasa.error3.attrib8 = Error al leer calculo de gasolina {0} {1} {2} {3} {4} {5} {6} {7} 
+error.impuestoGasolina.sobretasa.error3.attrib9 = Error al leer calculo de gasolina {0} {1} {2} {3} {4} {5} {6} {7} {8} 
+error.impuestoGasolina.sobretasa.error3.attrib10 = Error al leer calculo de gasolina {0} {1} {2} {3} {4} {5} {6} {7} {8} {9} 
 #->FIN dev-federico 7/02/2019 textos para Manejo de errores en sobre tasa a gasolina
 #->INI dev-federico 11/02/2019 textos para Consulta de estado de cuenta
 consultas.estadoDeCuenta.tipoConsulta = Tipo:
