Atencion a observaciones realizadas en las pruebas de sobretasa a gasolina

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3347,13 +3347,13 @@ impuestos.decGasolina.InformacionDec.calcular = Calcular
 #totales
 impuestos.decGasolina.Totales.titulo = Totales
 impuestos.decGasolina.Totales.totalSobretasa = Total sobretasa a cargo
-impuestos.decGasolina.Totales.valorSansiones = Valor Sansiones
+impuestos.decGasolina.Totales.valorSanciones = Valor sanciones
 impuestos.decGasolina.Totales.totalCargo = Total a cargo
 
 #Pagos
 impuestos.decGasolina.Pagos.titulo = Pagos
 impuestos.decGasolina.Pagos.valorSobretasa = Valor sobretasa
-impuestos.decGasolina.Pagos.valorSansiones = Valor Sansiones
+impuestos.decGasolina.Pagos.valorSanciones = Valor sanciones
 impuestos.decGasolina.Pagos.valorIntereses = Valor intereses de Mora
 impuestos.decGasolina.Pagos.menosCompensaciones = Menos compensaciones
 impuestos.decGasolina.Pagos.valorTotalPagar = Valor total a Pagar
@@ -3378,8 +3378,8 @@ impuestos.decGasolina.InformacionFirma.Firma = FIRMA
 impuestos.decGasolina.Pago.titulo = Pago
 impuestos.decGasolina.Pago.GenerarDec = Generar Declaración
 impuestos.decGasolina.Pago.crearNuevaDec = Crear nueva Declaración
-impuestos.decGasolina.Pago.PresentarDec = Presentar Declaración
-impuestos.decGasolina.Pago.Pagar = Pagar
+impuestos.decGasolina.Pago.PresentarDec = Generar Declaración
+impuestos.decGasolina.Pago.Pagar = Pagar en línea
 impuestos.decGasolina.Pago.nota = *Nota: Recordar que el pago de este impuesto, únicamente podrá ser pagado mediante el pago en línea
 
 #sobretasa a gasolina
@@ -3392,7 +3392,7 @@ impuestos.sobreTasaGasolina.menu.buscar = Buscar:
 impuestos.sobreTasaGasolina.menu.tipoDocumento = Tipo de Documento
 impuestos.sobreTasaGasolina.menu.numeroDocumento = Número de Documento
 impuestos.sobreTasaGasolina.menu.seleccionar = Seleccionar
-impuestos.sobreTasaGasolina.menu.presentarDeclaracion = Presentar Declaración
+impuestos.sobreTasaGasolina.menu.presentarDeclaracion = Generar Declaración
 impuestos.sobreTasaGasolina.menu.rop = ROP
 impuestos.sobreTasaGasolina.menu.pagoEnLinea = Pago en Línea
 impuestos.sobreTasaGasolina.menu.nombre= Nombre
