Delineación Urbana Cambios de forma y estilo

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3462,7 +3462,7 @@ updatePwd.token.sameOldPassword=La nueva contraseña no puede ser igual a la ant
 delineacion.urbana.title=Deliación Urbana
 delineacion.urbana.desciption=Es la declaración y pago que se realiza cuando existe una construcción nueva o refacción de las existentes. El Impuesto de Delineación Urbana lo constituye la ejecución de obras o construcciones con licencia de construcción o reconocimiento. Más información.
 delineacion.urbana.propertiesList=Listado de Predios Registrados
-delineacion.urbana.CDU=CDU
+delineacion.urbana.CDU=C.D.U
 delineacion.urbana.select=Seleccionar
 delineacion.urbana.declaration=Presentar Declaración
 delineacion.urbana.payments.ROPGeneration=Generación de ROP
@@ -3472,25 +3472,27 @@ delineacion.urbana.detail.title=Detalle Delineación Urbana
 delineacion.urbana.detail.selectYear=Selecciona el año gavable a consultar
 delineacion.urbana.detail.selectperiod=Selecciona el Periodo
 delineacion.urbana.detail.search=Buscar
+delineacion.urbana.detail.regresar=Regresar
+delineacion.urbana.detail.direc=Dirección
 
 delineacion.urbana.basic.title=Datos Básicos
 delineacion.urbana.basic.Liceconstruction=Licencia de Construcción
-delineacion.urbana.basic.numresolurevalida=Número de resolución revalidación
+delineacion.urbana.basic.numresolurevalida=Resolución revalidación
 delineacion.urbana.basic.tipomarca= Tipo de marca
 delineacion.urbana.basic.marca=Marca
-delineacion.urbana.basic.numresoprorroga=Número de resolución prórroga
+delineacion.urbana.basic.numresoprorroga=Resolución prórroga
 delineacion.urbana.basic.fechrexpe=Fecha de expedición
 delineacion.urbana.basic.fechrevalida=Fecha de revalidación
-delineacion.urbana.basic.fechfinobra=Fecha fin de la obra
-delineacion.urbana.basic.fechresolprorroga=Fecha resolución prórroga
-delineacion.urbana.basic.numradicado=Número de radicado
+delineacion.urbana.basic.fechfinobra=Fecha fin obra
+delineacion.urbana.basic.fechresolprorroga=F.Resolución prórroga
+delineacion.urbana.basic.numradicado=Número radicado
 delineacion.urbana.basic.fechradicado=Fecha de radicado
-delineacion.urbana.basic.modaLicencia=Modalidad de licencia
+delineacion.urbana.basic.modaLicencia=Modalidad licencia
 
 delineacion.urbana.adicionales.title=Datos Adicionales
 delineacion.urbana.adicionales.numradicado=Número de radicado
 delineacion.urbana.adicionales.chip=CHIP
-delineacion.urbana.adicionales.direcobra=Dirección de la Obra
+delineacion.urbana.adicionales.direcobra=Dirección de Obra
 delineacion.urbana.adicionales.codpostal=Código Postal
 delineacion.urbana.adicionales.localidad=Localidad
 delineacion.urbana.adicionales.matinmo=Matricula inmobiliaria
