Ajustes en la tabla de informacion de declaracion en el liquidador de gasolina

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3337,8 +3337,8 @@ impuestos.decGasolina.DatosGenerales.OpcionesUso = Opciones de uso
 impuestos.decGasolina.InformacionDec.titulo = Información de la Declaración
 impuestos.decGasolina.InformacionDec.claseProducto = Clase de Producto*:
 impuestos.decGasolina.InformacionDec.galones = Galones Gravados*:
-impuestos.decGasolina.InformacionDec.preciosReferencia = Precios de Referencia%
-impuestos.decGasolina.InformacionDec.porcentajeAlcohol = Alcohol carburizante*
+impuestos.decGasolina.InformacionDec.preciosReferencia = Precios de Referencia
+impuestos.decGasolina.InformacionDec.porcentajeAlcohol = Alcohol carburizante%*
 impuestos.decGasolina.InformacionDec.baseGravable = Base Gravable*
 impuestos.decGasolina.InformacionDec.valorSobretasa = Valor de Sobretasa*
 impuestos.decGasolina.InformacionDec.agregarDec = +
