cambios Sobrevehiculos y Predial

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2293,7 +2293,7 @@ sobre.vehiculos.reports.paymentRelation=RelaciÃ³n de Pagos
 sobre.vehiculos.reports.accountStatement=Estado de Cuenta
 sobre.vehiculos.massiveLiquidations.massiveLiquidations=Liquidaciones Masivas
 
-sobre.vehiculos.detail.title=Detalle Vehiculo
+
 sobre.vehiculos.detail.selectYear=Selecciona el año gavable a consultar
 sobre.vehiculos.detail.search=Buscar
 sobre.vehiculos.detail.pedingObligations=Obligaciones pendientes
@@ -3563,3 +3563,128 @@ delineacion.urbana.dec.firm.firma=Firma
 delineacion.urbana.dec.firm.predec=Presentar Declaración
 delineacion.urbana.dec.firm.paglin=Pagar en Línea
 delineacion.urbana.dec.firm.genrop=Generar ROP
+
+sobre.vehiculos.table.title= Mis Vehículos
+sobre.vehiculos.table.descripcion= El impuesto sobre vehículos automotores grava la propiedad o posesión de los vehículos matriculados en Bogotá. Los propietarios y poseedores lo deben declarar y pagar una vez al año. La información sobre las características que se presentan a continuación proviene de la Secretaría Distrital de Movilidad de Bogotá. Si encuentra alguna inconsistencia por favor verifique directamente con esta entidad, a través del Consorcio SIM. Mas Información
+sobre.vehiculo.table.anigrav= Año Gravable
+sobre.vehiculo.table.placa= Placa
+sobre.vehiculo.table.marca = Marca
+sobre.vehiculo.table.factura= Factura
+sobre.vehiculo.table.linea= Línea
+sobre.vehiculo.table.modelo= Modelo
+sobre.vehiculo.table.clase= Clase
+sobre.vehiculo.table.numpuertas= No. Puertas
+sobre.vehiculo.table.blindado= Blindado
+sobre.vehiculo.table.cilindraje= Cilindraje
+sobre.vehiculo.table.avaluo= Avalúo
+
+sobre.vehiculo.detail.title= Detalle
+sobre.vehiculo.detail.placa= Placa
+sobre.vehiculo.detail.idServicio= Id de Servicio
+sobre.vehiculo.detail.idestado= Id Estado
+sobre.vehiculo.detail.watts=Watts
+sobre.vehiculo.detail.clasanti= Clásico o Antiguo
+sobre.vehiculo.detail.cappasa= Capacidad Pasajeros
+sobre.vehiculo.detail.capton= Capacidad toneladas
+sobre.vehiculo.detail.feccambio= Fecha cambio servicio
+sobre.vehiculo.detail.feccance= Fecha Cancelación
+
+sobre.vehiculo.juridicos.title= Datos Jurídicos
+sobre.vehiculo.juridicos.tipo= Tipo
+sobre.vehiculo.juridicos.nomcomple= Nombre Completo
+sobre.vehiculo.juridicos.numero= Número
+sobre.vehiculo.juridicos.calidsuje= Calidad del sujeto
+sobre.vehiculo.juridicos.propiedad= % propiedad
+sobre.vehiculo.juridicos.fecdesde= Fecha desde
+sobre.vehiculo.juridicos.fechasta= Fecha hasta
+
+sobre.vehiculo.marcas.title= Marcas
+sobre.vehiculo.marcas.codmarca= Código de marca
+sobre.vehiculo.marcas.descrip= Descripción
+sobre.vehiculo.marcas.excencion= % de excención
+sobre.vehiculo.marcas.valexcencion= Valor de excención
+sobre.vehiculo.marcas.fecdesde= Fecha desde
+sobre.vehiculo.marcas.fechasta= Fecha hasta
+
+sobre.vehiculo.liqui.title= Liquidación
+sobre.vehiculo.liqui.avaactual= Avalúo Actual
+sobre.vehiculo.liqui.tarfiactual= Tarifa actual
+sobre.vehiculo.liqui.tipvehiculo= Tipo de Vehículo
+sobre.vehiculo.liqui.regresar= Regresar
+sobre.vehiculo.liqui.descfactura= Descarga de Factura
+sobre.vehiculo.liqui.presdecla= Presentar Declaración
+
+
+predial.unificado.table.title= Predial Unificado
+predial.unificado.table.descripcion= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital. Más información La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
+predial.unificado.table.chip= CHIP
+predial.unificado.table.matinmobi= Matricula Inmobiliaria
+predial.unificado.table.factura= Factura
+predial.unificado.table.tipdirec= Tipo de dirección
+predial.unificado.table.direcpred= Dirección del Predio
+predial.unificado.table.codpostal= Código Postal
+predial.unificado.table.codLocalidad= Código Localidad
+predial.unificado.table.estpredio= Estatus del predio
+predial.unificado.table.nomconarren= No. Contrato Arrendamiento
+predial.unificado.table.fecinactiva= Fecha inactivación
+
+predial.unificado.juridicos.title= Datos Jurídicos
+predial.unificado.juridicos.chip= CHIP
+predial.unificado.juridicos.tipdoc= Tipo de documento
+predial.unificado.juridicos.numdoc= No. de Documento
+predial.unificado.juridicos.nomcomple= Nombre Completo
+predial.unificado.juridicos.calidad= Calidad
+predial.unificado.juridicos.propiedad= % de Propiedad
+predial.unificado.juridicos.fecdesde= Fecha de validez (desde)
+predial.unificado.juridicos.fechasta= Fecha de validez (hasta)
+
+predial.unificado.economicos.title= Datos Económicos
+predial.unificado.economicos.avexclu= Avalúo Exclución Parcial
+predial.unificado.economicos.avcontra= Avalúo Contrato Arriendo
+predial.unificado.economicos.avindi= Avalúo Índice de Edificabilidad
+predial.unificado.economicos.avmejora= Avalúo Mejora
+predial.unificado.economicos.avresinocupa= Avalúo Restricción Índice Ocupación
+
+predial.unificado.fisicos.title= Datos Físicos
+predial.unificado.fisicos.areacons= Área Construida
+predial.unificado.fisicos.areaterre= Área Terreno
+predial.unificado.fisicos.areamejora= Área Terreno Mejora
+predial.unificado.fisicos.areamejcontri= Área Terreno Mejora Contribuyente
+predial.unificado.fisicos.areamatriz= Área Terreno Matriz Mejora
+predial.unificado.fisicos.codestart= Código Estrato
+predial.unificado.fisicos.ussuelo= Uso suelo Liquidación
+
+predial.unificado.marcas.title= Marcas
+predial.unificado.marcas.marca= Marca
+predial.unificado.marcas.tipmarca= tipo de Marca
+predial.unificado.marcas.pormarcaa= % de Marca
+predial.unificado.marcas.mutfis= Mutación Física
+predial.unificado.marcas.valexcencion= Valor Excención
+predial.unificado.marcas.conshistori= Conservación histórica
+predial.unificado.marcas.fecdesde= Fecha de Validez (desde)
+predial.unificado.marcas.fechasta= Fecha de Validez (hasta)
+
+predial.unificado.liquidacion.title= Liquidación
+predial.unificado.liquidacion.basgrav= Base Gravable
+predial.unificado.liquidacion.desthacen= Destino Hacendario
+predial.unificado.liquidacion.tarif= Tarifa Liquidación Final
+predial.unificado.liquidacion.valimp= Valor Impuesto
+predial.unificado.liquidacion.leyenda1= Si no estas de acuerdo con la información  registrada dirigete a la entidad competente: 
+predial.unificado.liquidacion.leyenda2= a) Para la sección Datos Económicos dirígete a la "Unidad Administrativa Especial de Catastro Distrital" 
+predial.unificado.liquidacion.leyenda3= b) Para la sección Datos Jurídicos dirígete a la "Superintendencia de Notariado y Registro"
+
+predial.unificado.consulta.title= Consulta años anteriores
+predial.unificado.consulta.anigrav= Año gravable a consultar
+predial.unificado.consulta.search= Buscar
+predial.unificado.consulta.regresar= Regresar
+predial.unificado.consulta.descu= Descuento 1%
+predial.unificado.consulta.desfactura= Descarga de factura
+predial.unificado.consulta.presdec= Presentar Declaración
+
+
+
+
+
+
+
+
