Nueva vista de publicidad

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2819,6 +2819,8 @@ publicidad.exterior.detail.outdooradvertising=Detalle Publicidad Exterior
 publicidad.exterior.detail.selectYear=Selecciona el año gavable a consultar
 publicidad.exterior.detail.search=Buscar
 publicidad.exterior.detail.basicdata=Datos Basicos
+publicidad.exterior.detail.return= Regresar
+publicidad.exterior.detail.presdecla= Presentar Declaración
 publicidad.exterior.detail.dateresolution=Fecha de Resolucion
 publicidad.exterior.detail.type=Tipo de solicitud
 publicidad.exterior.detail.Datenotification=Fecha de notificacion
@@ -2848,6 +2850,7 @@ publicidad.exterior.vehicles.licensenumber=Numero de Licencia de transito
 publicidad.exterior.vehicles.periodicity=Periodicidad 
 publicidad.exterior.vehicles.typeservice=Tipo de Servicio
 publicidad.exterior.vehicles.elementlocation=Ubicacion del elemento publicitario
+publicidad.exterior.vehicles.typevehicle= Tipo de vehículo
 
 publicidad.exterior.conventional=Convencional
 publicidad.exterior.conventional.typeitemreg=Tipo de elemento a registrar
@@ -2868,6 +2871,7 @@ publicidad.exterior.conventional.typeadvertising=Tipo de publicidad
 publicidad.exterior.conventional.numberfaces=Número de caras de exposición
 publicidad.exterior.conventional.licensevalidity=Vigencia licencia de construcción
 publicidad.exterior.conventional.Periodicity=Periodicidad (duración de la obra)
+publicidad.exterior.conventional.iluminado= Iluminado
 
 publicidad.exterior.tubular=Tubular
 publicidad.exterior.tubular.elementtype=Tipo de elemento a registrar
@@ -2882,6 +2886,20 @@ publicidad.exterior.tubular.visualorientation=Orientación Visual
 publicidad.exterior.tubular.chip=CHIP
 publicidad.exterior.tubular.propertyreg=Matrícula Inmobiliaria
 publicidad.exterior.tubular.numberfaces=Número de caras exposición
+
+publicidad.exterior.led.numresolución= Número resolución
+publicidad.exterior.led.direccion= Dirección
+publicidad.exterior.led.tipsolicitud= Tipo de solicitud
+publicidad.exterior.led.fecresol= Fecha de Resolución
+publicidad.exterior.led.fecnotifica= Fecha de notificación
+publicidad.exterior.led.loc= Localidad
+publicidad.exterior.led.codpostal= Código postal
+publicidad.exterior.led.area= Área total
+publicidad.exterior.led.chip= CHIP
+publicidad.exterior.led.matinmobi= Matrícula inmobiliaria
+publicidad.exterior.led.ubica= Ubicación
+publicidad.exterior.led.tippubli= Tipo de Publicidad
+publicidad.exterior.led.orvisual= Orientación Visual
 
 declaracion.publicidad.titulo= Declaración de Publicidad Exterior
 declaracion.publicidad.datgene= Datos Generales
