SDH - Pago En Línea - PSE

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3563,3 +3563,19 @@ delineacion.urbana.dec.firm.firma=Firma
 delineacion.urbana.dec.firm.predec=Presentar Declaración
 delineacion.urbana.dec.firm.paglin=Pagar en Línea
 delineacion.urbana.dec.firm.genrop=Generar ROP
+
+psePaymentForm.tipoDeImpuesto=Tipo de impuesto
+psePaymentForm.numeroDeReferencia=Número de referencia
+psePaymentForm.impuesto=Impuesto
+psePaymentForm.anoGravable=Año Grabable
+psePaymentForm.CHIP=CHIP
+psePaymentForm.periodo=Perido
+psePaymentForm.CUD=CUD
+psePaymentForm.noIdentificacion=No. identificación
+psePaymentForm.DV=DV
+psePaymentForm.tipoDeIdentificacion=Tipo de identificación
+psePaymentForm.fechaLimiteDePago=Fecha límite de pago
+psePaymentForm.pagoAdicional=Pago adicional
+psePaymentForm.banco=Banco
+psePaymentForm.valorAPagar=Valor a pagar
+psePaymentForm.tipoDeTarjeta=Tipo de tarjeta
