--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3724,3 +3724,29 @@ psePaymentForm.banco=Banco
 psePaymentForm.valorAPagar=Valor a pagar
 psePaymentForm.tipoDeTarjeta=Tipo de tarjeta
 
+mibuzon.inicial.title= Buzón Tributario
+mibuzon.inicial.descripcion= El Buzón Tributario te mantendrá al pendiente de todas las notificaciones y mensajes sobre tus obligaciones fiscales. Conoce el  Reglamento
+mibuzon.inicial.verdetalle= Para ver el detalle da clic en alguna de las opciones que se presentan:
+mibuzon.inicial.tipmsn= Tipo de mensaje
+mibuzon.inicial.numero= #
+mibuzon.inicial.noti= Notificaciones
+mibuzon.inicial.mns= Mensajes
+
+mibuzon.notificaciones.notifica= Notificaciones
+mibuzon.notificaciones.nuevos= Nuevos
+mibuzon.notificaciones.identi= Identificador
+mibuzon.notificaciones.autoridad= Autoridad Emisora
+mibuzon.notificaciones.asunto= Asunto
+mibuzon.notificaciones.fecnoti= Fecha de notificación
+mibuzon.notificaciones.leidos= Leídos
+
+mibuzon.mensajes.mensajes= Mensajes
+mibuzon.mensajes.nuevos= Nuevos
+mibuzon.mensajes.identi= Identificador
+mibuzon.mensajes.autoridad= Autoridad Emisora
+mibuzon.mensajes.asunto= Asunto
+mibuzon.mensajes.fecnoti= Fecha de notificación
+mibuzon.mensajes.papelera= Papelera
+mibuzon.mensajes.leidos= Leídos
+
+
