actualziacion de rit page

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1868,6 +1868,9 @@ mirit.contactData.cancel=Cancelar
 mirit.contactData.addAddress=Confirmar
 mirit.contactData.editarAddress=Editar Dirección
 mirit.contactData.addSocialNetwork= Agregar red social
+mirit.contactData.updateEmail= Actualizar Email
+mirit.contactData.updatePassword= Actualizar Contraseña
+mirit.contactData.updateAutorizaciones= Actualizar Autorizaciones
 mirit.addresshelper.tipo=Tipo
 mirit.addresshelper.numero=Número
 mirit.addresshelper.letra=Letra
