--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3199,13 +3199,17 @@ publicidad.exterior.description=Causación del Impuesto a la Publicidad Exterior
 
 publicidad.exterior.showing=Mostrando:
 publicidad.exterior.dataPerPage=datos por pagina
-publicidad.exterior.search=Buscar:
+publicidad.exterior.search=Buscar Resolución:
 publicidad.exterior.resolutionnumber=Numero de Resolucion
 publicidad.exterior.typefence=Tipo de Valla
-publicidad.exterior.select=Seleccionar
+publicidad.exterior.detalle=Detalle
+publicidad.exterior.ver= Ver
 publicidad.exterior.declarationpresent=Presentar Declaracion
 publicidad.exterior.rop=ROP
 publicidad.exterior.payonline=Pago en linea
+publicidad.exterior.tipodocumento= Tipo de Documento
+publicidad.exterior.numdocumento= Número de Documento
+publicidad.esterior.nombre= Nombre
 publicidad.exterior.detail.outdooradvertising=Detalle Publicidad Exterior
 publicidad.exterior.detail.selectYear=Selecciona el año gavable a consultar
 publicidad.exterior.detail.search=Buscar
@@ -3215,6 +3219,7 @@ publicidad.exterior.detail.type=Tipo de solicitud
 publicidad.exterior.detail.Datenotification=Fecha de notificacion
 publicidad.exterior.detail.validsince=Vigencia desde
 publicidad.exterior.detail.validityuntil=Vigencia hasta
+
 
 publicidad.exterior.detail.notices=Avisos
 publicidad.exterior.detail.typeelementreg=Tipo de Elemento que registar
