Cambios en el estilo de publicidad

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3204,14 +3204,15 @@ publicidad.exterior.resolutionnumber=Numero de Resolucion
 publicidad.exterior.typefence=Tipo de Valla
 publicidad.exterior.detalle=Detalle
 publicidad.exterior.ver= Ver
-publicidad.exterior.declarationpresent=Presentar Declaracion
+publicidad.exterior.declarationpresent=Generar Declaracion
+publicidad.exterior.regresar=Regresar
 publicidad.exterior.rop=ROP
 publicidad.exterior.payonline=Pago en linea
 publicidad.exterior.tipodocumento= Tipo de Documento
 publicidad.exterior.numdocumento= Número de Documento
 publicidad.esterior.nombre= Nombre
-publicidad.exterior.detail.outdooradvertising=Detalle Publicidad Exterior
-publicidad.exterior.detail.selectYear=Selecciona el año gavable a consultar
+publicidad.exterior.detail.outdooradvertising=Consulta tu detalle de periodos anteriores
+publicidad.exterior.detail.selectYear=Año gravable a consultar
 publicidad.exterior.detail.search=Buscar
 publicidad.exterior.detail.basicdata=Datos Basicos
 publicidad.exterior.detail.dateresolution=Fecha de Resolucion
