ajustes en pantallas de publicidad exterior

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2846,19 +2846,19 @@ publicidad.exterior.detail.numberfactions=Numero de Facciones
 publicidad.exterior.vehicles=Vehiculos
 publicidad.exterior.vehicles.typeadvertising=Tipo de Publicidad
 publicidad.exterior.vehicles.model=Modelo 
-publicidad.exterior.vehicles.typeitemreg=Tipo de elemento a registrar
+publicidad.exterior.vehicles.typeitemreg=Tipo de vehículo
 publicidad.exterior.vehicles.plate=Placa
 publicidad.exterior.vehicles.numberfaces=Numero de caras de la exposicion
 publicidad.exterior.vehicles.licensenumber=Numero de Licencia de transito
 publicidad.exterior.vehicles.periodicity=Periodicidad 
 publicidad.exterior.vehicles.typeservice=Tipo de Servicio
-publicidad.exterior.vehicles.elementlocation=Ubicacion del elemento publicitario
+publicidad.exterior.vehicles.elementlocation=Orientación visual
 publicidad.exterior.vehicles.typevehicle= Tipo de vehículo
 
 publicidad.exterior.conventional=Convencional
 publicidad.exterior.conventional.typeitemreg=Tipo de elemento a registrar
 publicidad.exterior.conventional.buildingpermit=Licencia de construcción
-publicidad.exterior.conventional.locationaddress=Dirección de ubicación del elemento CHIP
+publicidad.exterior.conventional.locationaddress=Dirección
 publicidad.exterior.conventional.totalarea=Área total
 publicidad.exterior.conventional.workcontract=Contrato de Obra
 publicidad.exterior.conventional.visualorientation=Orientación Visual
@@ -3241,18 +3241,18 @@ publicidad.exterior.detail.numberfactions=Numero de Facciones
 publicidad.exterior.vehicles=Vehiculos
 publicidad.exterior.vehicles.typeadvertising=Tipo de Publicidad
 publicidad.exterior.vehicles.model=Modelo 
-publicidad.exterior.vehicles.typeitemreg=Tipo de elemento a registrar
+publicidad.exterior.vehicles.typeitemreg=Tipo de vehículo
 publicidad.exterior.vehicles.plate=Placa
 publicidad.exterior.vehicles.numberfaces=Numero de caras de la exposicion
 publicidad.exterior.vehicles.licensenumber=Numero de Licencia de transito
 publicidad.exterior.vehicles.periodicity=Periodicidad 
 publicidad.exterior.vehicles.typeservice=Tipo de Servicio
-publicidad.exterior.vehicles.elementlocation=Ubicacion del elemento publicitario
+publicidad.exterior.vehicles.elementlocation=Orientación visual
 
 publicidad.exterior.conventional=Convencional
 publicidad.exterior.conventional.typeitemreg=Tipo de elemento a registrar
 publicidad.exterior.conventional.buildingpermit=Licencia de construcción
-publicidad.exterior.conventional.locationaddress=Dirección de ubicación del elemento CHIP
+publicidad.exterior.conventional.locationaddress=Dirección
 publicidad.exterior.conventional.totalarea=Área total
 publicidad.exterior.conventional.workcontract=Contrato de Obra
 publicidad.exterior.conventional.visualorientation=Orientación Visual
@@ -3303,6 +3303,9 @@ declaracion.publicidad.OrValla= Orientación de la Valla
 declaracion.publicidad.luginst= Lugar de Instalación
 declaracion.publicidad.tamvalla= Tamaño de la Valla
 declaracion.publicidad.opuso= Opciones de Uso
+declaracion.publicidad.opuso.d=
+declaracion.publicidad.opuso.d01=Declaración
+declaracion.publicidad.opuso.d02=Corrección
 declaracion.publicidad.tamvalla= Tamaño de la Valla
 declaracion.publicidad.totpagar= Total a Pagar
 declaracion.publicidad.impcargo= Impuesto a Cargo
