Reportantes de Información

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3743,7 +3743,7 @@ mibuzon.inicial.mns= Mensajes
 
 mibuzon.notificaciones.notifica= Notificaciones
 mibuzon.notificaciones.nuevos= Nuevos
-mibuzon.notificaciones.identi= Identificador
+mibuzon.notificaciones.identi= Identificador 
 mibuzon.notificaciones.autoridad= Autoridad Emisora
 mibuzon.notificaciones.asunto= Asunto
 mibuzon.notificaciones.fecnoti= Fecha de notificación
@@ -3758,4 +3758,17 @@ mibuzon.mensajes.fecnoti= Fecha de notificación
 mibuzon.mensajes.papelera= Papelera
 mibuzon.mensajes.leidos= Leídos
 
+representantes.info.inicial.leyenda= El Reportante de Información realiza el reporte de información exógenas de Impuestos Distritales
+representantes.info.inicial.titulo= Mi información reportada
+representantes.info.inicial.bienvenido= Bienvenido(a) al validador de información de medios magnéticos. Puedes realizar la carga directa de los archivos requeridos.
+representantes.info.inicial.seleccion= Por favor selecciona los campos solicitados
+representantes.info.inicial.impreportar= Impuesto a Reportar
+representantes.info.inicial.anigrav= Año gravable a Reportar
+representantes.info.inicial.cacelar= Cancelar
+representantes.info.inicial.continuar= Continuar
+representantes.info.inicial.descarga= Da clic en el archivo, descarga y visualiza el detalle de los artículos al impuesto que seleccionaste
+representantes.info.inicial.predial= Medios Magnéticos Predial
+representantes.info.inicial.opain= Medios Magnéticos OPAIN
+representantes.info.inicial.vehicular= Medios Magnéticos Vehicular
+representantes.info.inicial.ica= Medios Magnéticos ICA
 
